--- a/_posts/2020-05-16-base.md
+++ b/_posts/2020-05-16-base.md
@@ -5,8 +5,8 @@ layout: post
 mathjax: true
 ---
 
-![scale_to_note](../help/20200516_base.jpg)
+![scale_to_note](/help/20200516_base.jpg)
 
-String instruments: $F \propto \frac {\sqrt T} {L*G}$ where F, T, L, W represent the frequency, tension, length and linear weight (gauge) respectively.
+String instruments: $F \propto \frac {\sqrt T} {L G}$ where F, T, L, W represent the frequency, tension, length and linear weight (gauge).
 
-with scale (frets) $S \propto \ln L}$ and notes (pitch) $N \propto \ln {F}}$: $S \propto \frac {\ln{T}} {2} - N - ln {W} $
+with scale (frets) $S \propto \ln L$ and notes (pitch) $N \propto \ln {F}$: $S \propto \frac {\ln T} {2} - \ln W - N $
