--- a/_posts/2020-05-16-base.md
+++ b/_posts/2020-05-16-base.md
@@ -5,8 +5,45 @@ layout: post
 mathjax: true
 ---
 
+[Marin Mersenne](https://en.wikipedia.org/wiki/Marin_Mersenne), 1637, *Traité de l'harmonie universelle*:
+
+## latex
+
+```latex
+$Fréquence = \frac 1 {2L} \sqrt \frac {Tension} {MasseUnitaire}$
+```
+
+$Fréquence = \frac 1 {2L} \sqrt \frac {Tension} {MasseUnitaire}$
+
+## asciimath
+
+```asciimath
+$Fréquence=1/(2L)sqrt((Tension)/(MasseUnitaire)$
+```
+
+$Fréquence=1/(2L)sqrt((Tension)/(MasseUnitaire)$
+
+## unicode
+
+*Fréquence = 1/(2L) √(Tension/MasseUnitaire)*
+
+## javascript
+
+```javascript
+//declaration
+function fréquence(masseUnitaire, longueur, tension) { return Math.sqrt(tension/masseUnitaire) / longueur / 2 }
+//arrow
+const fréquence = (masseUnitaire, longueur, tension) => Math.sqrt(tension/masseUnitaire) / longueur / 2
+//implied variable declaration
+fréquence =  Math.sqrt(tension/masseUnitaire) / longueur / 2
+```
+
+## le graph
+
+:hear_no_evil: [inharmonicity](https://www.sevenstring.org/threads/string-gauges-and-inharmonicity.10064/)
+
+:ear: [inharmonicity factor](https://www.ele.uri.edu/courses/ele369g/14a_Inharmonicity.pdf) $\sqrt T \propto D^2/L \Rightarrow F\propto D/L^2 \Rightarrow note\propto D-scale/2$
+
+:guitar::violin: $note\propto -scale/3$
+
 ![scale_to_note](/help/20200516_base.jpg)
-
-String instruments: $F \propto \frac {\sqrt T} {L G}$ where F, T, L, W represent the frequency, tension, length and linear weight (gauge).
-
-with scale (frets) $S \propto \ln L$ and notes (pitch) $N \propto \ln {F}$: $S \propto \frac {\ln T} {2} - \ln W - N $
