--- a/_posts/2020-05-16-base.md
+++ b/_posts/2020-05-16-base.md
@@ -46,4 +46,5 @@ fréquence =  Math.sqrt(tension/masseUnitaire) / longueur / 2
 
 :guitar::violin: $note\propto -scale/3$
 
+![inharmony](/help/20200517_inharmony.jpg)
 ![scale_to_note](/help/20200516_base.jpg)
