--- a/_posts/2020-05-16-base.md
+++ b/_posts/2020-05-16-base.md
@@ -18,10 +18,10 @@ $Fréquence = \frac 1 {2L} \sqrt \frac {Tension} {MasseUnitaire}$
 ## asciimath
 
 ```asciimath
-$Fréquence=1/(2L)sqrt((Tension)/(MasseUnitaire)$
+$Fréquence=1/(2L) sqrt ((Tension)/(MasseUnitaire))$
 ```
 
-$Fréquence=1/(2L)sqrt((Tension)/(MasseUnitaire)$
+$Fréquence=1/(2L) sqrt ((Tension)/(MasseUnitaire))$
 
 ## unicode
 
@@ -44,7 +44,7 @@ fréquence =  Math.sqrt(tension/masseUnitaire) / longueur / 2
 
 :ear: [inharmonicity factor](https://www.ele.uri.edu/courses/ele369g/14a_Inharmonicity.pdf) $\sqrt T \propto D^2/L \Rightarrow F\propto D/L^2 \Rightarrow note\propto D-scale/2$
 
-:guitar::violin: $note\propto -scale/3$
+:guitar::violin: $scale \propto 3 note$
 
 ![inharmony](/help/20200517_inharmony.jpg)
 ![scale_to_note](/help/20200516_base.jpg)
