--- a/_posts/2020-05-17-text.md
+++ b/_posts/2020-05-17-text.md
@@ -6,6 +6,7 @@ layout: post
 
 * default
   * .markdown, .mdown, .mkdn, .md -- gem install commonmarker (https://github.com/gjtorikian/commonmarker)
+    * [guide](https://guides.github.com/features/mastering-markdown/)
 * contenders
   * .asciidoc, .adoc, .asc -- gem install asciidoctor (http://asciidoctor.org)
     * GitHub supports AsciiDoc syntax in repositories, wikis and gists (powered by Asciidoctor)
